# aoc_c

./: .gitignore  CMakeLists.txt  Makefile  README.md  flame.sh
.github/workflows/: c-cpp.yml
include/: aoc.h
src/: aoc.h  main.c  mmap_input.c  mmap_input.h
src/2021/: aoc2021.c  aoc2021.h  day1.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day2.c  day25.c  day3.c  day4.c  day5.c  day6.c  day7.c  day8.c  day9.c  input1.c  input2.c  input3.c  main.c
src/utils/: array.h  btree.c  btree.h  compare.c  compare.h  hashtable.c  hashtable.h  queue.c  queue.h  utils.c  utils.h
